# Whisper-Cantonese

./: .gitignore  README.md  Whisper_w_PEFT.ipynb  dataset.ipynb  eval.ipynb  pyproject.toml  requirements.txt  start.sh  train.ipynb  train.py  transcribe.py  youtube.ipynb
.cursor/rules/: youtube-dataset.md  youtube-dataset.mdc
Whisper/: formatter.py  utils.py  whisper_hf.py  whisper_hf_accelerate.py
daataset_scripts/: 2_segment_audio.py  3_create_tar.py  4_upload_dataset.py  count.py  yt.ipynb
dataset_scripts/: 1_download_channel.py
